--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 28
     buildToolsVersion "28.0.2"
     defaultConfig {
-        applicationId "com.example.offline_android"
+        applicationId "cm.offline.tv"
         minSdkVersion 18
         targetSdkVersion 28
         versionCode 1
@@ -42,4 +42,12 @@ dependencies {
     annotationProcessor "com.jakewharton:butterknife-compiler:10.2.1"
 
     implementation 'com.nineoldandroids:library:2.4.0'
+    //广告滑动控件
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'com.youth.banner:banner:+'
+    //
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    implementation 'org.greenrobot:eventbus:3.0.0'
 }
