--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.offline_android">
+    package="cm.offline.tv">
 
     <uses-feature
         android:name="android.hardware.touchscreen"
@@ -39,6 +39,18 @@
         <activity
             android:name="cm.offline.tv.ui.HomeActivity"
             android:screenOrientation="landscape" />
+
+        <service
+            android:name="cm.offline.tv.service.MonitorTouchService"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/accessibilityservice" />
+        </service>
+
     </application>
 
 </manifest>
