--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.1.1'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
+    implementation 'androidx.cardview:cardview:1.0.0'
+
     implementation 'org.greenrobot:eventbus:3.0.0'
 }
